# v3

./: .gitignore  Cargo.toml
docker/: docker-compose.dev.yml  docker-compose.yml
docker/data/redis/: dump.rdb
domain/: Cargo.toml
domain-macro/: Cargo.toml
domain-macro/src/: lib.rs
domain/src/: command.rs  common.rs  lib.rs  user.rs
messenger/: Cargo.toml
messenger/src/: lib.rs  main.rs  messages.rs  messenger.rs
messenger/tests/: messenger.rs
microservices/user/: Cargo.toml
microservices/user/src/: main.rs
store/: Cargo.toml
store/src/: client.rs  lib.rs  repository.rs
store/tests/: store.rs
