[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

time = { version = "0.3.7", features = ["serde"] }

domain-macro = {path = '../domain-macro'}