[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
bb8 = "0.7.1"
bb8-redis = "0.10.1"
futures-util = "0.3.19"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "io-std"] }
async-trait = "0.1.52"
