[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
futures-util = "0.3.19"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "io-std"] }
async-trait = "0.1.52"
deadpool = "0.9.2"
tokio-amqp = "2.0.0"
tokio-executor-trait = "2.1.0"
deadpool-lapin = { version = "0.9.1", features = ["rt_tokio_1"] }
lapin = "2.0.0"