[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"] }
mongodb = { version = "2.1.0", features = ["bson-uuid-0_8", "tokio-runtime", "bson-chrono-0_4"] }
tokio = { version = "1.16.1", features = ["full"] }
domain = {path = "../domain"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
futures-util = "0.3.19"
tracing = "0.1.30"
async-trait = "0.1.52"
[dev-dependencies]
tracing-subscriber =  "0.3.8"