[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4"] }
tokio = { version = "1.16.1", features = ["full"] }
domain = {path = "../../domain"}
store = {path = "../../store"}
messenger = {path = "../../messenger"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
futures-util ={version = "0.3.19"}
tracing = "0.1.30"
async-trait = "0.1.52"
[dev-dependencies]
tracing-subscriber =  "0.3.8"